--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ theme_settings:
   avatar: assets/img/my_pic.png?raw=true
   favicon: assets/favicon.ico
   gravatar: # Email MD5 hash
-  description: "A website with blog posts and pages" # used by search engines
+  description: "A Blog about machine learning, statistical modeling and data science" # used by search engines
 
   # Header and footer text
   header_text: >
